--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.seailz</groupId>
-    <artifactId>ElytraGlide</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>Flaps</artifactId>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>ElytraGlide</name>
+    <name>Flaps</name>
 
     <properties>
         <java.version>21</java.version>
